<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="ResourceName">PxerStudio</string>
    <string name="pi_project_manager">项目管理</string>
    <string name="pi_save_project">保存项目</string>
    <string name="pi_name">名称</string>
    <string name="pi_delete_layer">删除图层</string>
    <string name="pi_tip_delete_layer">确定要删除该图层吗?</string>
    <string name="pi_merge">合并</string>
    <string name="pi_merge_all_layers">合并所有图层</string>
    <string name="pi_tip_merge_all_layers">确定合并所有图层吗?</string>
    <string name="pi_clear_current_layer">清空当前图层</string>
    <string name="pi_tip_clear_current_layer">确定清空当前的图层吗?</string>
    <string name="pi_clear">清空</string>
    <string name="pi_merge_down_layer">向下合并图层</string>
    <string name="pi_tip_merge_down_layer">确定向下合并图层吗?</string>
    <string name="pi_new_project">新建项目</string>
    <string name="pi_create">创建</string>
    <string name="pi_rename">重命名</string>
    <string name="pi_delete_project">删除项目</string>
    <string name="pi_tip_delete_project">确定删除该项目吗?!</string>
    <string name="pi_project_deleted">项目已被删除</string>
    <string name="pi_unable_delete_project">无法删除项目!</string>
    <string name="pi_merge_down">向下合并</string>
    <string name="pi_remove_current_layer">移除</string>
    <string name="pi_toggle_visibility">可见性切换</string>
    <string name="pi_show_all_layers">显示所有图层</string>
    <string name="pi_hide_all_layers">隐藏所有图层</string>
    <string name="pi_export">导出</string>
    <string name="pi_png">PNG</string>
    <string name="pi_gif">GIF</string>
    <string name="pi_only_show_selected_layer">仅显示所选图层</string>
    <string name="pi_layer">图层</string>
    <string name="pi_layers">图层</string>
    <string name="pi_reset_view_port">重置视图</string>
    <string name="pi_grid_on_off">网格开/关</string>
    <string name="pi_project">项目</string>
    <string name="pi_all_projects">所有项目</string>
    <string name="pi_new_new">新建</string>
    <string name="pi_something_went_wrong">出错啦!</string>
    <string name="pi_error_while_loading_project">加载项目出错</string>
    <string name="pi_no_project_found">没有找到项目</string>
    <string name="pi_duplicate_layer">克隆</string>
    <string name="pi_project_name_null">项目名称不能为空!</string>
    <string name="pi_width_value">宽：%d</string>
    <string name="pi_height_value">高：%d</string>
    <string name="pi_painting">绘制中...</string>
    <string name="pi_width_height">宽高：%d x %d</string>
    <string name="pi_export_failed">导出失败</string>
    <string name="pi_export_successful">导出成功</string>
</resources>