<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/gridonoff"
        android:icon="@drawable/ic_grid_on_24dp"
        android:title="@string/pi_grid_on_off"
        app:showAsAction="always" />
    <item
        android:id="@+id/resetvp"
        android:icon="@drawable/ic_center_focus_weak_24dp"
        android:title="@string/pi_reset_view_port"
        app:showAsAction="always" />
    <item
        android:id="@+id/layers"
        android:icon="@drawable/ic_layers_24dp"
        android:title="@string/pi_layers"
        app:showAsAction="always" />

    <item android:title="@string/pi_layer">
        <menu>
            <item
                android:id="@+id/onlyshowselectedlayer"
                android:title="@string/pi_only_show_selected_layer" />

            <item
                android:id="@+id/showalllayers"
                android:title="@string/pi_show_all_layers" />

            <item
                android:id="@+id/hidealllayers"
                android:title="@string/pi_hide_all_layers" />

            <item
                android:id="@+id/mergealllayer"
                android:title="@string/pi_merge_all_layers" />

        </menu>
    </item>

    <item android:title="@string/pi_export">
        <menu>
            <item
                android:id="@+id/export"
                android:title="@string/pi_png" />
            <item
                android:id="@+id/exportgif"
                android:title="@string/pi_gif" />
        </menu>
    </item>


    <item android:title="@string/pi_project">
        <menu>
            <item
                android:id="@+id/projectm"
                android:title="@string/pi_all_projects" />
            <item
                android:id="@+id/save"
                android:title="@string/save" />
            <item
                android:id="@+id/open"
                android:title="@string/open" />
            <item
                android:id="@+id/newp"
                android:title="@string/pi_new_new" />
        </menu>
    </item>
</menu>